# ck

./: LICENSE.txt  version.txt
doc/: Cricket.html  changes.txt
doc/doxygen/: annotated.html  annotated_dup.js  attenuationmode_8h.html  attenuationmode_8h.js  attenuationmode_8h_source.html  bank_8h.html  bank_8h_source.html  ck_8h.html  ck_8h.js  ck_8h_source.html  class_ck_bank-members.html  class_ck_bank.html  class_ck_bank.js  class_ck_custom_file-members.html  class_ck_custom_file.html  class_ck_custom_file.js  class_ck_custom_stream-members.html  class_ck_custom_stream.html  class_ck_custom_stream.js  class_ck_effect-members.html  class_ck_effect.html  class_ck_effect.js  class_ck_effect_bus-members.html  class_ck_effect_bus.html  class_ck_effect_bus.js  class_ck_effect_processor-members.html  class_ck_effect_processor.html  class_ck_effect_processor.js  class_ck_mixer-members.html  class_ck_mixer.html  class_ck_mixer.js  class_ck_sound-members.html  class_ck_sound.html  class_ck_sound.js  classes.html  config_8h.html  config_8h.js  config_8h_source.html  customfile_8h.html  customfile_8h.js  (+75 more)
doc/doxygen/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_c.js  (+33 more)
doc/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list
doc/manual/: 3d.html  3rdparty.html  building.html  cktool.html  contents.html  examples.html  faq.html  intro.html  licensing.html  looping.html  nospam.js  overview.html  source.html  style.css
ext/libogg/: Makefile  ogg_win_vs2010.vcxproj  ogg_win_vs2012.vcxproj  ogg_win_vs2013.vcxproj  ogg_win_vs2015.vcxproj  ogg_win_vs2017.vcxproj  ogg_wp8_vs2013.vcxproj
ext/tinyxml/: Makefile  tinyxml_win_vs2010.vcxproj  tinyxml_win_vs2012.vcxproj  tinyxml_win_vs2013.vcxproj  tinyxml_win_vs2015.vcxproj  tinyxml_win_vs2017.vcxproj  tinyxml_wp8_vs2013.vcxproj
ext/tremor/: Makefile  floor0.c  floor1.c  misc.h  os.h  sharedbook.c  tremor_win_vs2010.vcxproj  tremor_win_vs2012.vcxproj  tremor_win_vs2013.vcxproj  tremor_win_vs2015.vcxproj  tremor_win_vs2017.vcxproj  tremor_wp8_vs2015.vcxproj  vorbisfile.c
inc/ck/: ck.h  config.h
src/ck/: Makefile  ck_win_vs2010.sln  ck_win_vs2010.vcxproj  ck_win_vs2012.sln  ck_win_vs2012.vcxproj  ck_win_vs2013.sln  ck_win_vs2013.vcxproj  ck_win_vs2015.sln  ck_win_vs2015.vcxproj  ck_win_vs2017.sln  ck_win_vs2017.vcxproj  ck_wp8_vs2012.sln  ck_wp8_vs2012.vcxproj  ck_wp8_vs2012.vcxproj.filters  ck_wp8_vs2013.sln  ck_wp8_vs2013.vcxproj.filters  ck_wp8_vs2015.sln  ck_wp8_vs2015.vcxproj  skeleton.cpp  skeleton.h
src/ck.xcworkspace/: contents.xcworkspacedata
src/ck/android/ck/: CMakeLists.txt  build.gradle
src/ck/android/ck/src/main/: AndroidManifest.xml
src/ck/android/ck/src/main/cpp/: build_headers.sh  com_crickettechnology_audio_Bank.cpp  com_crickettechnology_audio_Bank.h  com_crickettechnology_audio_Ck.cpp  com_crickettechnology_audio_Ck.h  com_crickettechnology_audio_Effect.cpp  com_crickettechnology_audio_Effect.h  com_crickettechnology_audio_EffectBus.cpp  com_crickettechnology_audio_EffectBus.h  com_crickettechnology_audio_Mixer.cpp  com_crickettechnology_audio_Mixer.h  com_crickettechnology_audio_Sound.cpp  com_crickettechnology_audio_Sound.h  floatref.cpp  floatref.h  intref.cpp  intref.h
src/ck/android/ck/src/main/java/com/crickettechnology/audio/: AttenuationMode.java  Bank.java  BiquadFilterParam.java  BiquadFilterParam_FilterType.java  BitCrusherParam.java  Ck.java  Config.java  DistortionParam.java  Effect.java  EffectBus.java  EffectType.java  FloatRef.java  IntRef.java  Mixer.java  ObjectRef.java  PathType.java  Proxy.java  RingModParam.java  Sound.java
src/cktool/: Makefile  adpcmencoder.cpp  adpcmencoder.h  aiffreader.cpp  aiffreader.h  argparser.cpp  argparser.h  audioreader.cpp  audioreader.h  cktool.1  cktool_win_vs2010.vcxproj  cktool_win_vs2012.vcxproj  cktool_win_vs2013.vcxproj  cktool_win_vs2015.vcxproj  cktool_win_vs2017.vcxproj  encoder.cpp  encoder.h  guid.cpp  guid.h  main.cpp  pcmi16encoder.cpp  pcmi16encoder.h  pcmi8encoder.cpp  pcmi8encoder.h  test.sh  wavreader.cpp  wavreader.h
src/samples/dsptouch/android/app/: CMakeLists.txt  build.gradle
src/samples/dsptouch/android/app/src/main/: AndroidManifest.xml
src/samples/dsptouch/android/app/src/main/cpp/: bindings.cpp
src/samples/dsptouch/android/app/src/main/java/com/crickettechnology/samples/DspTouch/: DspTouchActivity.java
src/samples/dsptouch/android/app/src/main/res/layout/: activity_dsptouch.xml
src/samples/dsptouch/android/app/src/main/res/values/: strings.xml  styles.xml
src/samples/dsptouch/android/app/src/main/res/values-v11/: styles.xml
src/samples/dsptouch/android/app/src/main/res/values-v14/: styles.xml
src/samples/game/android/app/: CMakeLists.txt  build.gradle
src/samples/game/android/app/src/main/: AndroidManifest.xml
src/samples/game/android/app/src/main/cpp/: bindings.cpp
src/samples/game/android/app/src/main/java/com/crickettechnology/game/: GameActivity.java  GameGLSurfaceView.java  GameRenderer.java
src/samples/hellocricket/android-ndk-native/app/: CMakeLists.txt  build.gradle
src/samples/hellocricket/android-ndk-native/app/src/main/: AndroidManifest.xml
src/samples/hellocricket/android-ndk-native/app/src/main/assets/: hellocricket.ckb
src/samples/hellocricket/android-ndk-native/app/src/main/cpp/: hellocricket.cpp
src/samples/hellocricket/android-ndk-native/app/src/main/res/layout/: activity_main.xml
src/samples/hellocricket/android-ndk-native/app/src/main/res/values/: strings.xml
src/samples/hellocricket/android-ndk/app/: CMakeLists.txt  build.gradle
src/samples/hellocricket/android-ndk/app/src/main/: AndroidManifest.xml
src/samples/hellocricket/android-ndk/app/src/main/cpp/: hellocricket.cpp
src/samples/hellocricket/android-ndk/app/src/main/java/com/crickettechnology/samples/HelloCricketNDK/: MainActivity.java
src/samples/hellocricket/android-ndk/app/src/main/res/values/: strings.xml
(+503 files in other folders)
